--- a/deploy/canary.config
+++ b/deploy/canary.config
@@ -1,3 +1,5 @@
-SERVICES=(canary)
-INGRESSES=(canary)
-DEPLOYMENTS=(canary)
+NAMESPACE=canary-demo
+
+SERVICES=(canary/canary)
+INGRESSES=(canary/canary)
+DEPLOYMENTS=(canary/canary)
