--- a/deploy/stable.config
+++ b/deploy/stable.config
@@ -1,3 +1,5 @@
-SERVICES=(stable)
-INGRESSES=(stable)
-DEPLOYMENTS=(stable)
+NAMESPACE=canary-demo
+
+SERVICES=(stable/stable)
+INGRESSES=(stable/stable)
+DEPLOYMENTS=(stable/stable)
